# add-on-class

./: .gitignore  README.md  setup.cfg
examples/: abstract_object_decorator.py  example1.py  example2.py  example3.py
src/abstract_additive_class/: __init__.py  abstract_additive_class.py
src/abstract_object_decorator/: __init__.py  abstract_object_decorator.py
src/add_on_class/: __init__.py  add_on_class.py
src/construction_requirements_integrator/: __init__.py  construction_requirements_integrator.py
tests/: abstract_object_decorator_test.py  construction_requirements_integrator_test.py  test1.py  test2.py  test3.py
