[metadata]
name = abstract-design-patterns
version = 0.2.1
author = Behzad Shayegh
author_email = behzad.shayegh@ut.ac.ir
description = This package, with the aim of accelerating and facilitating the use of some design patterns, offers abstract classes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BehzadShayegh/abstract-design-patterns
project_urls =
    Bug Tracker = https://github.com/BehzadShayegh/abstract-design-patterns/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src