[metadata]
name = abstract-object-decorator
version = 0.1.1
author = Behzad Shayegh
author_email = behzad.shayegh@ut.ac.ir
description = With the help of this module, you can implement decorators careless about things you dont want to change.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BehzadShayegh/abstract-object-decorator
project_urls =
    Bug Tracker = https://github.com/BehzadShayegh/abstract-object-decorator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src