[metadata]
name = add-on-class
version = 0.1.3
author = Behzad Shayegh
author_email = behzad.shayegh@ut.ac.ir
description = This package provides you with a module that allows you to easily define classes that are stacked on top of each other and add features to each other, creating a whole new class.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BehzadShayegh/add-on-class
project_urls =
    Bug Tracker = https://github.com/BehzadShayegh/add-on-class/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src